<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="250dp"
        android:layout_height="102dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

<!--    <EditText-->
<!--        android:id="@+id/so_dien_thoai"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:background="@drawable/custom_edit_text"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/firstname"-->
<!--        android:inputType="text"-->
<!--        android:padding="@dimen/padsize15"-->
<!--        android:textColorHint="@color/gray" />-->



    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:padding="@dimen/padsize15"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:padding="@dimen/padsize15"
        android:hint="@string/email"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:padding="@dimen/padsize15"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:padding="@dimen/padsize15"
        android:hint="@string/relypassword"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/custom_button"
        android:text="ĐĂNG KÝ"
        android:textSize="20dp"
        app:backgroundTint="@null" />



</LinearLayout>